--- a/Nuages.Identity.UI/wwwroot/locales/en-CA.json
+++ b/Nuages.Identity.UI/wwwroot/locales/en-CA.json
@@ -3,6 +3,7 @@
 	"errorMessage": {
 		"invalidEmail": "Email is invalid",
 		"no_access": {
+			"AccountNotConfirmed": "You account is not confirmed",
 			"lockedOut": "Your account is locked",
 			"notWithinDateRange": "Your user account is inactive on this date"
 		},
@@ -28,5 +29,8 @@
 		"passwordConfirmation": "Password Confirmation",
 		"passwordMustMatch": "Password and confirmation must be the same",
 		"title": "Register"
+	},
+	"resetPassword": {
+		"title": ""
 	}
 }
