--- a/Nuages.Identity.UI/wwwroot/locales/fr-CA.json
+++ b/Nuages.Identity.UI/wwwroot/locales/fr-CA.json
@@ -20,6 +20,7 @@
 		},
 		"recaptchaError": "Erreur de Recptcha",
 		"required": "Le champ [{0}] est requis.",
+		"unknownError": "Erreur inconnue",
 		"userNameOrPasswordInvalid": "Nom d'utilisateur/courriel ou mot de pass invalide"
 	},
 	"externalLogin": {
