--- a/locales/en-CA.json
+++ b/locales/en-CA.json
@@ -15,6 +15,7 @@
 		"invalidEmail": "Email is invalid",
 		"no_access": {
 			"AccountNotConfirmed": "You account is not confirmed",
+			"error": "Access denied",
 			"lockedOut": "Your account is locked",
 			"notWithinDateRange": "Your user account is currently inactive "
 		},
@@ -77,6 +78,13 @@
 		"rememberMe": "Remember me",
 		"title": "Log in to your account"
 	},
+	"mfa": {
+		"appNotAvailable": "Don't have access to your authenticator device? You can",
+		"appNotAvailableRecoveryCodes": "log in with a recovery code.",
+		"instructions": "Your login is protected with an authenticator app. Enter your authenticator code below.",
+		"rememberMachine": "Remember this device",
+		"title": "Two-factor authentication"
+	},
 	"or": "or",
 	"passwordExpired": {
 		"instructions": "Your password has expired or needs to be changed. Choose a new password.",
@@ -91,6 +99,10 @@
 		"RequiredLength": "Requires at least {0} characters",
 		"RequiredUniqueChars": "Requires at least {0} different characters",
 		"title": "Password requirements"
+	},
+	"recoveryCode": {
+		"instructions": "You have requested to log in with a recovery code. This login will not be remembered until you provide an authenticator app code at log in or disable 2FA and log in again.",
+		"title": "Recovery code verification"
 	},
 	"register": {
 		"accountCreated": "Your account was created. Please check your emails to find the confirmation message for your email address.",
