--- a/locales/fr-CA.json
+++ b/locales/fr-CA.json
@@ -75,12 +75,14 @@
 			"userNameEmailPhone": "Nom d'utilisateur, courriel ou no. de téléphone"
 		},
 		"password": "Mot de passe",
+		"passwordless": "Sans mot de passe",
 		"rememberMe": "Se souvenir de moi",
 		"title": "Connection à votre compte"
 	},
 	"loginWithSMS": {
 		"instructions": "Entrez-votre courriel. Un message texte vous sera transmis contenant un code de vérification. Cette fonction doit avoir été activée.",
 		"seeSMS": "Voir vos message textes pour le code",
+		"send": "Envoyer le code",
 		"title": "Connection avec Texto"
 	},
 	"mfa": {
@@ -107,7 +109,8 @@
 		"title": "Exigences du mot de passe"
 	},
 	"passwordless": {
-		"instructions": "Vous avez demandé de vous connecter sans mot de passe. Un courriel vous sera transmis pr courriel.",
+		"instructions": "Vous avez demandé de vous connecter sans mot de passe. Un lien de connection vous sera transmis pr courriel.",
+		"message": "Le code de vérification est {0}",
 		"seeEmail": "Vérifier vos courriels afin de retrouver le lien de connection sans mot de passe",
 		"send": "Envoyer le lien",
 		"title": "Connection sans mot de passe"
